--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -6,7 +6,7 @@
   </main>
   <aside>
     <div class="info">
-      <h2>some info</h2>
+      <get-request></get-request>
     </div>
   </aside>
 </section>
