Users request JsonPlaceholder

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,8 +15,8 @@
     </li>
     <li 
       routerLinkActive="active"
-      routerLink = "/user">
-      user
+      routerLink = "/users">
+      users
     </li>
   </ul>
 </nav>
