--- a/src/app/users-request/users-request.component.html
+++ b/src/app/users-request/users-request.component.html
@@ -11,7 +11,7 @@
 <section>
   <div class="user">
     
-    <p> {{users[1].name}} <span>name</span></p>
+    <p>{{users[1].name}} <span>name</span></p>
     <p>{{users[1].email}} <span>email</span></p>
     <p>{{users[1].username}} <span>username</span></p>
   </div>
@@ -31,6 +31,16 @@
     <p>{{users[3].username}} <span>username</span></p>
 
   </div>
+
+  <div class="user">
+    
+    <p>{{users[4].name}} <span>name</span></p>
+    <p>{{users[4].email}} <span>email</span></p>
+    <p>{{users[4].username}} <span>username</span></p>
+
+  </div>
+
 </section>
-  
+
+<button (click) = 'backToHome()'>Go to Home </button>
 
